--- a/src/app/component/game/game.template.html
+++ b/src/app/component/game/game.template.html
@@ -5,7 +5,7 @@
 	</div>
 	<div class="game__title">
 		<span>Tic-Tac-Toe</span>
-		<a href="http://www.google.com" target="_blank">Github</a>
+		<a href="https://github.com/MonoLizard/tictactoe" target="_blank">Github</a>
 	</div>
 	<board class="game__board"></board>
 </div>
